<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">COS漫展相册</string>
    <string name="home_title">COS漫展相册</string>
    <string name="album_label">最近选择的照片</string>
    <string name="action_pick">选照片</string>
    <string name="action_edit">修图</string>
    <string name="action_grid">9宫格</string>
    <string name="action_share">分享</string>
    <string name="preview_image">预览照片</string>
    <string name="photo_thumbnail">照片缩略图</string>
    <string name="no_images_selected">未选择照片</string>
    <string name="no_preview">暂无预览图</string>
    <string name="edit_applied">已添加柔光效果</string>
    <string name="nine_grid_done">9宫格已生成</string>
    <string name="share_with">分享到</string>
</resources>
